--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-node_modules/
-.vscode/
-.eslintrc
-react/node_modules/
-react/coverage
-react/.scannerwork
-react/*-lock.json
-react/__tests__/__snapshots__/*
-react/__tests__/*/__snapshots__/*
+node_modules
+.DS_Store
+*.log
+package-lock.json
+dist
