--- a/package.json
+++ b/package.json
@@ -1,18 +1,52 @@
 {
   "name": "vtex-mocks",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "A package to centralize all vtex mocks",
-  "main": "index.js",
+  "homepage": "https://github.com/Maik3345/vtex-mocks#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/Maik3345/vtex-mocks"
   },
-  "scripts": {},
-  "author": "",
   "license": "ISC",
+  "author": "",
+  "main": "index.js",
+  "bin": {
+    "vtex-mocks": "./bin/vtex-mocks.js"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "scripts",
+    "index.d.ts",
+    "index.js",
+    "README.md"
+  ],
+  "scripts": {
+    "build": "tsc -d",
+    "dev": "tsc -w",
+    "lint": "tsc --noEmit && eslint --ext js,jsx,ts,tsx .",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json}\"",
+    "prepublish": "npm run build && npm publish"
+  },
+  "dependencies": {
+    "chalk": "~2.3.2",
+    "cli-table": "^0.3.11",
+    "inquirer": "^7.1.0",
+    "inquirer-prompt-suggest": "^0.1.0",
+    "ora": "^4.0.4",
+    "typescript": "^3.9.7"
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "husky": "^8.0.3"
+    "@types/cli-table": "^0.3.4",
+    "@types/inquirer": "^6.5.0",
+    "@types/node": "^14.0.27",
+    "@vtex/prettier-config": "^0.3.1",
+    "@vtex/tsconfig": "^0.5.0",
+    "eslint": "^7.6.0",
+    "eslint-config-vtex-react": "^6.7.4",
+    "husky": "^8.0.3",
+    "prettier": "^2.0.5"
   }
 }
